--- a/diafitass.html
+++ b/diafitass.html
@@ -76,7 +76,7 @@
         justify-content: center;
         font-size: 1.5rem;
         font-weight: 900;
-        transform: translate(-140%, 40%) rotate(15deg);
+        transform: translate(-100%, 10%) rotate(15deg);
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
       }
       .video-container {
@@ -165,7 +165,7 @@
         <div class="mb-8 flex justify-center">
           <div class="relative w-max">
             <img
-              src="assets/img/5.png"
+              src="assets/diafit_pill.png"
               alt="Изображение продукта Diafit Ass"
               class="rounded-lg max-w-md"
               width="450"
@@ -251,7 +251,7 @@
         <div class="lg:w-1/2 flex justify-center">
           <div class="relative w-max">
             <img
-              src="assets/img/5.png""
+              src="assets/diafit_pill.png""
               alt="Изображение продукта Diafit Ass"
               class="rounded-lg max-w-lg"
               width="950"
@@ -1019,7 +1019,7 @@
             class="max-w-md mx-auto bg-white/10 backdrop-blur-sm p-8 rounded-2xl shadow-lg border border-white/20"
           >
             <img
-              src="assets/img/5.png"
+              src="assets/diafit_pill.png"
               alt="Продукт Диафит АСС"
               class="w-3/2 mx-auto mb-4"
             />
