--- a/venofit.html
+++ b/venofit.html
@@ -77,7 +77,7 @@
         justify-content: center;
         font-size: 1.5rem;
         font-weight: 900;
-        transform: translate(-140%, 40%) rotate(15deg);
+        transform: translate(-80%, 160%) rotate(15deg);
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
       }
       .video-container {
@@ -98,6 +98,16 @@
         width: 100%;
         height: 100%;
       }
+      .product-image-container {
+  position: relative;
+  z-index: 10; /* Ensures it stays above other elements */
+  transform-origin: center; /* Scales from center */
+}
+
+.product-image {
+  transform: scale(1.2); /* Adjust this value to make bigger/smaller */
+  transition: transform 0.3s ease; /* Optional smooth scaling */
+}
     </style>
   </head>
   <body>
@@ -158,14 +168,14 @@
         </p>
 
         <!-- Изображение продукта -->
-        <div class="mb-8 flex justify-center">
-          <div class="relative w-max">
+        <div class="mb-4 flex justify-center">
+          <div class="product-image-container relative w-max">
             <img
-              src="assets/img/6.png"
+              src="assets/Бинофет.png"
               alt="Изображение продукта Venofit"
-              class="rounded-lg max-w-md"
-              width="450"
-              height="450"
+              class="product-image rounded-lg max-w-xs"
+              width="300"
+              height="300"
             />
             <div class="discount-bubble">-50%</div>
           </div>
@@ -244,14 +254,14 @@
         </div>
 
         <!-- Изображение продукта справа на десктопе -->
-        <div class="lg:w-1/2 flex justify-center">
-          <div class="relative w-max">
+        <div class="lg:w-1/2 flex justify-center items-start">
+          <div class="product-image-container relative w-max">
             <img
-              src="assets/img/6.png"
+              src="assets/Бинофет.png"
               alt="Изображение продукта Venofit"
-              class="rounded-lg max-w-lg"
-              width="950"
-              height="950"
+              class="product-image rounded-lg max-w-xs"
+              width="300"
+              height="300"
             />
             <div class="discount-bubble">-50%</div>
           </div>
@@ -892,9 +902,9 @@
             class="max-w-md mx-auto bg-white/10 backdrop-blur-sm p-8 rounded-2xl shadow-lg border border-white/20"
           >
             <img
-              src="assets/img/6.png"
+              src="assets/Бинофет.png"
               alt="Продукт Венофит"
-              class="w-3/2 mx-auto mb-4"
+              class="w-1/2 mx-auto mb-4 product-image"
             />
             <p class="mb-4 text-yellow-300 font-bold">
               <span class="lang-ru"
