--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             rgba(34, 197, 94, 0.15) 0%,
             rgba(21, 128, 61, 0.15) 0%
           ),
-      url('assets/_03\ Супер\ ПамятЬ\ mobile.jpg'); /* Фото для десктопов */
+      url('assets/spmmobile.jpg'); /* Фото для десктопов */
 
         background-size: cover;
         background-position: center;
@@ -45,7 +45,7 @@
         rgba(34, 197, 94, 0.15) 0%,
         rgba(21, 128, 61, 0.15) 0%
       ),
-          url('assets/_03\ Супер\ ПамятЬ\ deskop.jpg'); /* <-- ЗАМЕНИТЕ ССЫЛКУ НА ВАШ ФОН ЗДЕСЬ */
+          url('assets/spmdesktop.jpg'); /* <-- ЗАМЕНИТЕ ССЫЛКУ НА ВАШ ФОН ЗДЕСЬ */
     background-size: cover;
     background-position: center;
   }
