--- a/stop-artroz.html
+++ b/stop-artroz.html
@@ -32,8 +32,18 @@
         color: var(--text-light);
       }
       .hero-gradient {
-        background: radial-gradient(circle, #1f2937, #111827);
+        background: url('assets/stopbg.jpg');
+        background-size: cover;
+        background-position: center;
       }
+      @media (min-width: 1024px) {
+  .hero-gradient {
+    /* Для десктопов */
+    background: url('assets/stopbg.jpg');
+    
+    background-size: cover;
+    background-position: center;
+  }}
       .section-gradient {
         background: linear-gradient(
           180deg,
@@ -115,6 +125,23 @@
         width: 100%;
         height: 100%;
       }
+      .product-image-container {
+    position: relative;
+    z-index: 10;
+    transform-origin: center;
+    border-radius: 12px;
+    padding: 15px;
+    display: inline-block;
+  }
+
+  .product-image {
+    transform: scale(1.2);
+    transition: transform 0.3s ease;
+    border: none !important;
+    box-shadow: none !important;
+    /* Remove any background from the image itself */
+    background: transparent !important;
+  }
     </style>
   </head>
   <body>
@@ -183,11 +210,11 @@
 
         <!-- Изображение продукта -->
         <div class="mb-8 flex justify-center">
-          <div class="relative w-max">
+          <div class="relative w-max product-image-container">
             <img
-              src="assets/img/1.png"
+              src="assets/stop_artiroz.png"
               alt="Изображение продукта stopartroz"
-              class="rounded-lg max-w-md"
+              class="rounded-lg max-w-md product-image"
               width="450"
               height="450"
             />
@@ -269,11 +296,11 @@
 
         <!-- Изображение продукта справа на десктопе -->
         <div class="lg:w-1/2 flex justify-center">
-          <div class="relative w-max">
+          <div class="relative w-max product-image-container">
             <img
-              src="assets/img/1.png"
+              src="assets/stopartdesk.png"
               alt="Изображение продукта stoprtroz"
-              class="rounded-lg max-w-lg"
+              class="rounded-lg max-w-lg product-image"
               width="950"
               height="950"
             />
@@ -1121,12 +1148,12 @@
           </p>
 
           <div
-            class="max-w-md mx-auto bg-background-light/50 backdrop-blur-sm p-8 rounded-2xl shadow-lg border border-white/10"
+            class="max-w-md mx-auto bg-background-light/50 backdrop-blur-sm p-8 rounded-2xl shadow-lg border border-white/10 product-image-container"
           >
             <img
-              src="assets/img/1.png"
+              src="assets/stop_artiroz.png"
               alt="Продукт Стоп Артроз"
-              class="w-3/2 mx-auto mb-4"
+              class="w-1/2 mx-auto mb-4 product-image"
             />
             <p class="mb-4 text-accent-color font-bold">
               <span class="lang-ru"
